<resources>
    <string name="app_name">AsociacionIsaYCristian</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Layout hints and texts-->
    <string name="add">Añadir</string>
    <string name="register_text">Regístrate</string>
    <string name="login_Text">Acceder</string>
    <string name="password">Contraseña</string>
    <string name="txt_mail">Correo electrónico</string>
    <string name="username">Nombre de usuario</string>
    <string name="addStore_HintID">Id de la tienda</string>
    <string name="addStore_hintName">Nombre de la tienda</string>
    <string name="addProduct_HintId">Id del producto</string>
    <string name="addProduct_HintName">Nombre del producto</string>
    <string name="addProduct_HintDescription">Descripción breve</string>
    <string name="addProduct_HintPrice">Precio del producto</string>
    <string name="addProduct_HintStock">Stock disponible</string>

    <!--Toast messages-->
    <string name="succes_register">Registro completo</string>
    <string name="error_register">El registro falló</string>
    <string name="succes_email">Email enviado</string>
    <string name="error_email">Error al enviar</string>
    <string name="sesion_ok">Sesion iniciada</string>
    <string name="short_fields">La contraseña o el correo son muy cortos</string>

    <!--Tabs management-->
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_users">Usuarios</string>
    <string name="tab_stores">Locales</string>
    <string name="tab_orders">Pedidos</string>

    <!--Adapter Store and Product texts-->
    <string name="confirm_sure">¿Seguro que quieres confirmar \   </string>
    <string name="manage">Administrar</string>
    <string name="delete">Borrar</string>
    <string name="are_you_sure">¿Seguro que quieres borrar \ </string>
    <string name="cant_undo">\? Esta opción no se puede deshacer</string>
    <string name="is_deleted"> eliminado</string>
    <string name="accept">\Aceptar</string>
    <string name="cancel"> Cancelar</string>
    <string name="edit"> Editar</string>
    <string name="cancelled"> Cancelado</string>
    <string name="empty_fields">Por favor rellene todos los campos</string>
    <string name="product_added">Producto añadido</string>
    <string name="product_edited">Editado</string>

    <!--Adapter User and Order texts-->
    <string name="setBalance">Conceder saldo</string>
    <string name="viewOrders">Ver pedidos</string>
    <string name="outstanding">Pendiente</string>
    <string name="collected">Recogido</string>
    <string name="order_confirm">confirmar pedido</string>
    <string name="not_enough_balance">El usuario no tiene saldo suficiente</string>
    <string name="not_enough_stock">No hay suficiente stock</string>
    <string name="amount">Cantidad</string>


</resources>